<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_local_movies"
        android:title="@string/movies"
        />

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/tv_shows"
        />

    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites" />

</menu>